// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Availability with save button should render without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-evenly",
        "paddingHorizontal": 30,
        "paddingVertical": 15,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#232323",
          "flex": 0,
          "fontSize": 18,
          "marginBottom": 40,
        }
      }
    >
      Les jours où je suis le plus disponible
    </Text>
    <ScrollViewMock
      contentContainerStyle={
        Object {
          "flex": 1,
          "justifyContent": "space-around",
        }
      }
    >
      <View
        key="monday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={false}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Lundi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="tuesday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={true}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Mardi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="wednesday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={false}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Mercredi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="thursday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={true}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Jeudi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="friday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={false}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Vendredi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="saturday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={false}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Samedi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="sunday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={true}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Dimanche
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
    </ScrollViewMock>
  </View>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "padding": 15,
      }
    }
  >
    <SecondaryButton
      onPress={[Function]}
      title="ENREGISTRER"
    />
  </View>
</View>
`;

exports[`Render Availability without save button should render without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-evenly",
        "paddingHorizontal": 30,
        "paddingVertical": 15,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#232323",
          "flex": 0,
          "fontSize": 18,
          "marginBottom": 40,
        }
      }
    >
      Les jours où je suis le plus disponible
    </Text>
    <ScrollViewMock
      contentContainerStyle={
        Object {
          "flex": 1,
          "justifyContent": "space-around",
        }
      }
    >
      <View
        key="monday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={false}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Lundi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="tuesday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={true}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Mardi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="wednesday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={false}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Mercredi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="thursday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={true}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Jeudi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="friday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={false}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Vendredi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="saturday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={false}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Samedi
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        key="sunday"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "flex-start",
          }
        }
      >
        <Switch
          onValueChange={[Function]}
          style={
            Object {
              "marginRight": 20,
            }
          }
          value={true}
        />
        <TouchableWithoutFeedback
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 40,
              "top": 20,
            }
          }
          onPress={[Function]}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#232323",
                  "fontSize": 18,
                }
              }
            >
              Dimanche
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
    </ScrollViewMock>
  </View>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "padding": 15,
      }
    }
  >
    <SecondaryButton
      onPress={[Function]}
      title="PASSER"
    />
    <SecondaryButton
      onPress={[Function]}
      title="SUIVANT"
    />
  </View>
</View>
`;
